# FileDisc

./: .gitignore  CMakeLists.txt  README.md
doc/: JSTP.txt
include/auth/: KeyGenerator.hpp
include/client/: test_main.hpp
include/def/: config.hpp  err.hpp  req.hpp  types.hpp  version.hpp
include/err/: FileDiscExcept.hpp
include/init/: init.hpp
include/jftp/: JftpClient.hpp  JftpIO.hpp  JftpServer.hpp  jftp.hpp
include/jftp/helper/: RequestHelper.hpp  ResponseHelper.hpp
include/jftp/io/: JftpIO.hpp  TcpWrapper.hpp  UdpWrapper.hpp
include/jftp/job/: TcpReqJob.hpp  TcpRspJob.hpp  UdpReqJob.hpp  UdpRspJob.hpp
include/jftp/req/: JftpRequest.hpp
include/jftp/rsp/: JftpResponse.hpp
include/jstp/: HostStruct.hpp  JstpClient.hpp  JstpEmiter.hpp  JstpPayload.hpp  JstpRequest.hpp  JstpResponse.hpp  JstpServer.hpp  RequestHook.hpp  jstp.hpp
include/jstp/jobs/: JstpJob.hpp  ReqFileJob.hpp  ReqHostJob.hpp  RequesHostJob.hpp  RequestDirJob.hpp  RequestFileJob.hpp
include/server/: server_holder.hpp
include/thread/: Job.hpp  JobQueue.hpp  ManagerInf.hpp  RunnerInf.hpp  Thread.hpp  ThreadFunc.hpp  ThreadJob.hpp  ThreadManager.hpp  ThreadRunner.hpp  threadfuncs.hpp
include/thread/jobs/: CntledJob.hpp
include/utility/: Defer.hpp  LocalLogger.hpp  StaticKit.hpp  strutil.hpp  utility_holder.hpp
src/client/: ClientCLI.cpp  client.cpp  tcp_cli.cpp  test_jstpclient.cpp  test_jstpserver.cpp  test_main.cpp
src/err/: FileDiscExcept.cpp
src/jstp/: JstpClient.cpp  JstpPayload.cpp  JstpServer.cpp
src/jstp/jobs/: JstpJob.cpp  ReqFileJob.cpp  ReqHostJob.cpp  RequesHostJob.cpp
src/server/: ServerCLI.cpp
src/thread/: Job.cpp  JobQueue.cpp  ManagerInf.cpp  RunnerInf.cpp  ThreadManager.cpp  ThreadRunner.cpp
src/thread/jobs/: CntledJob.cpp
src/utility/: Defer.cpp  ErrBox.cpp  StaticKit.cpp  mixed.cpp  strutil.cpp
